pre qa state for multiple phone numbers

--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -283,7 +283,7 @@
                   <span class="add-on"
                         style="width: 70px">Standaard</span>
                   <input type="text"
-                         class="inputPhoneNumber-1"
+                         class="inputPhoneNumbers inputPhoneNumber-1"
                          ng-model="profilemeta.phones[1]"
                          ng-change="profilePhoneNumberParser(1, profilemeta.phones[1])"
                          style="width: 155px">
@@ -335,7 +335,7 @@
                   <span class="add-on"
                         style="width: 70px">Extra.1</span>
                   <input type="text"
-                         class="inputPhoneNumber-2"
+                         class="inputPhoneNumbers inputPhoneNumber-2"
                          ng-model="profilemeta.phones[2]"
                          ng-change="profilePhoneNumberParser(2, profilemeta.phones[2])"
                          style="width: 155px">
