adjusted new colors

--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -205,7 +205,7 @@
 
               .more {
                 // background-color: #415e6b;
-                background-color: #4f824f;
+                background-color: #6cad6c;
               }
 
               .even {
@@ -215,7 +215,7 @@
 
               .less {
                 // background-color: #a0a0a0;
-                background-color: #a93232;
+                background-color: #d34545;
               }
 
               .disabled {
@@ -472,7 +472,7 @@
         }
 
         .sa-icon-reserve-available {
-          background-color: #4f824f;
+          background-color: #6cad6c;
         }
 
         .sa-icon-reserve-available-north {
@@ -480,15 +480,15 @@
         }
 
         .sa-icon-reserve-available-south {
-          background-color: #e08a0c;
+          background-color: #8a85c7;
         }
 
         .sa-icon-reserve-available-schipper {
-          background-color: #e0c100;
+          background-color: #f6e500;
         }
 
         .sa-icon-reserve-unavailable {
-          background-color: #a93232;
+          background-color: #d34545;
         }
 
         .sa-icon-reserve-unreached {
