--- a/war/css/app.css
+++ b/war/css/app.css
@@ -10,14 +10,12 @@
   font-weight: normal;
   font-style: normal;
 }
-
 @font-face {
   font-family: "EntypoRegular";
   src: url("../fonts/entypo.woff") format("woff"), url("../fonts/entypo.ttf") format("truetype"), url("../fonts/entypo.svg#EntypoRegular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
-
 span.entypo {
   margin: 0;
   padding: 0;
@@ -566,13 +564,13 @@ dl dd {
   margin-right: 10px;
 }
 #dashboard .widget ul#pies li .blocks .block .icon .more {
-  background-color: #4f824f;
+  background-color: #6cad6c;
 }
 #dashboard .widget ul#pies li .blocks .block .icon .even {
   background-color: #ba6a24;
 }
 #dashboard .widget ul#pies li .blocks .block .icon .less {
-  background-color: #a93232;
+  background-color: #d34545;
 }
 #dashboard .widget ul#pies li .blocks .block .icon .disabled {
   background-color: #a0a0a0;
@@ -767,19 +765,19 @@ dl dd {
   background-color: #ba6a24;
 }
 .sa ul.sa-setup li .sa-member .sa-icon-reserve-available {
-  background-color: #4f824f;
+  background-color: #6cad6c;
 }
 .sa ul.sa-setup li .sa-member .sa-icon-reserve-available-north {
   background-color: black;
 }
 .sa ul.sa-setup li .sa-member .sa-icon-reserve-available-south {
-  background-color: #e08a0c;
+  background-color: #8a85c7;
 }
 .sa ul.sa-setup li .sa-member .sa-icon-reserve-available-schipper {
-  background-color: #e0c100;
+  background-color: #f6e500;
 }
 .sa ul.sa-setup li .sa-member .sa-icon-reserve-unavailable {
-  background-color: #a93232;
+  background-color: #d34545;
 }
 .sa ul.sa-setup li .sa-member .sa-icon-reserve-unreached {
   background-color: #65619b;
@@ -1314,24 +1312,24 @@ ul.nav-tabs-app li span.entypo {
   width: 100%;
 }
 #memberBars ul li .progress .bar-Available {
-  background-color: #4f824f;
-  background-image: -moz-linear-gradient(top, #4f824f, #406940);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4f824f), to(#406940));
-  background-image: -webkit-linear-gradient(top, #4f824f, #406940);
-  background-image: -o-linear-gradient(top, #4f824f, #406940);
-  background-image: linear-gradient(to bottom, #4f824f, #406940);
+  background-color: #6cad6c;
+  background-image: -moz-linear-gradient(top, #6cad6c, #406940);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6cad6c), to(#406940));
+  background-image: -webkit-linear-gradient(top, #6cad6c, #406940);
+  background-image: -o-linear-gradient(top, #6cad6c, #406940);
+  background-image: linear-gradient(to bottom, #6cad6c, #406940);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4f824f', endColorstr='#ff406940', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff6cad6c', endColorstr='#ff406940', GradientType=0);
 }
 #memberBars ul li .progress .bar-BeschikbaarZuid {
-  background-color: #e08a0c;
-  background-image: -moz-linear-gradient(top, #e08a0c, #c77b0a);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e08a0c), to(#c77b0a));
-  background-image: -webkit-linear-gradient(top, #e08a0c, #c77b0a);
-  background-image: -o-linear-gradient(top, #e08a0c, #c77b0a);
-  background-image: linear-gradient(to bottom, #e08a0c, #c77b0a);
+  background-color: #8a85c7;
+  background-image: -moz-linear-gradient(top, #8a85c7, #c77b0a);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#8a85c7), to(#c77b0a));
+  background-image: -webkit-linear-gradient(top, #8a85c7, #c77b0a);
+  background-image: -o-linear-gradient(top, #8a85c7, #c77b0a);
+  background-image: linear-gradient(to bottom, #8a85c7, #c77b0a);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe08a0c', endColorstr='#ffc77b0a', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff8a85c7', endColorstr='#ffc77b0a', GradientType=0);
 }
 #memberBars ul li .progress .bar-BeschikbaarNoord {
   background-color: #1a1a1a;
@@ -1344,24 +1342,24 @@ ul.nav-tabs-app li span.entypo {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a1a1a', endColorstr='#ff050505', GradientType=0);
 }
 #memberBars ul li .progress .bar-SchipperVanDienst {
-  background-color: #e0c100;
-  background-image: -moz-linear-gradient(top, #e0c100, #c7ac00);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e0c100), to(#c7ac00));
-  background-image: -webkit-linear-gradient(top, #e0c100, #c7ac00);
-  background-image: -o-linear-gradient(top, #e0c100, #c7ac00);
-  background-image: linear-gradient(to bottom, #e0c100, #c7ac00);
+  background-color: #f6e500;
+  background-image: -moz-linear-gradient(top, #f6e500, #c7ac00);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f6e500), to(#c7ac00));
+  background-image: -webkit-linear-gradient(top, #f6e500, #c7ac00);
+  background-image: -o-linear-gradient(top, #f6e500, #c7ac00);
+  background-image: linear-gradient(to bottom, #f6e500, #c7ac00);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe0c100', endColorstr='#ffc7ac00', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff6e500', endColorstr='#ffc7ac00', GradientType=0);
 }
 #memberBars ul li .progress .bar-Unavailable {
-  background-color: #a93232;
-  background-image: -moz-linear-gradient(top, #a93232, #8f2b2b);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a93232), to(#8f2b2b));
-  background-image: -webkit-linear-gradient(top, #a93232, #8f2b2b);
-  background-image: -o-linear-gradient(top, #a93232, #8f2b2b);
-  background-image: linear-gradient(to bottom, #a93232, #8f2b2b);
+  background-color: #d34545;
+  background-image: -moz-linear-gradient(top, #d34545, #8f2b2b);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#d34545), to(#8f2b2b));
+  background-image: -webkit-linear-gradient(top, #d34545, #8f2b2b);
+  background-image: -o-linear-gradient(top, #d34545, #8f2b2b);
+  background-image: linear-gradient(to bottom, #d34545, #8f2b2b);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffa93232', endColorstr='#ff8f2b2b', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd34545', endColorstr='#ff8f2b2b', GradientType=0);
 }
 #memberBars ul li .progress .bar-Unreached {
   background-color: #65619b;
@@ -1433,7 +1431,7 @@ ul.nav-tabs-app li span.entypo {
 }
 
 .legenda-row .legenda-state-available .square {
-  background-color: #4f824f;
+  background-color: #6cad6c;
 }
 
 .legenda-row .legenda-state-available-north .square {
@@ -1445,15 +1443,15 @@ ul.nav-tabs-app li span.entypo {
 }
 
 .legenda-row .legenda-state-unavailable .square {
-  background-color: #a93232;
+  background-color: #d34545;
 }
 
 .legenda-row .legenda-state-schipper-service .square {
-  background-color: #e0c100;
+  background-color: #f6e500;
 }
 
 .legenda-row .legenda-more .square {
-  background-color: #4f824f;
+  background-color: #6cad6c;
 }
 
 .legenda-row .legenda-even .square {
@@ -1461,7 +1459,7 @@ ul.nav-tabs-app li span.entypo {
 }
 
 .legenda-row .legenda-less .square {
-  background-color: #a93232;
+  background-color: #d34545;
 }
 
 #legends {
@@ -1574,10 +1572,10 @@ div.timeline-event-dot {
 }
 
 div.timeline-event-range {
-                          /*border-style: solid;
-border-width: 1px;
-border-radius: 2px;
--moz-border-radius: 2px;  /* For Firefox 3.6 and older */
+  /*border-style: solid;
+  border-width: 1px;
+  border-radius: 2px;
+  -moz-border-radius: 2px;  /* For Firefox 3.6 and older */
 }
 
 div.timeline-event-range-drag-left {
@@ -1701,9 +1699,9 @@ div.timeline-navigation-move-right {
 /*.available {
   margin:0;*/
 /* padding: 5px; */
-/*background-color: #4f824f;*/
-/*  background-color: #4f824f;
-  border-bottom: 10px solid #4f824f;
+/*background-color: #6cad6c;*/
+/*  background-color: #6cad6c;
+  border-bottom: 10px solid #6cad6c;
   text-indent: -9999px;*/
 /*
   color: #333333;
@@ -1739,14 +1737,14 @@ div.timeline-navigation-move-right {
 /*.availableS {
   margin:0;*/
 /*   background-color: #69b369; 
-  background-color: #4f824f;
+  background-color: #6cad6c;
   text-indent: -9999px;
-  border-top: 10px solid #e08a0c;
+  border-top: 10px solid #8a85c7;
 }*/
 /*.availableN {
   margin:0;*/
 /* background-color: #3e673e;
-background-color: #4f824f;
+background-color: #6cad6c;
 border-top: 10px solid black;
 text-indent: -9999px;
 }
@@ -1754,8 +1752,8 @@ text-indent: -9999px;
 .schipper {
 margin:0;
 /* background-color: #3e673e; */
-/*  background-color: #4f824f;
-  border-top: 10px solid #e0c100;
+/*  background-color: #6cad6c;
+  border-top: 10px solid #f6e500;
   text-indent: -9999px;
 }*/
 /*.unreachable {
@@ -1767,17 +1765,17 @@ margin:0;
 }*/
 /*.unavailable {
   margin: 0;
-  background-color: #a93232;  
-  border-top: 10px solid #a93232;
+  background-color: #d34545;
+  border-top: 10px solid #d34545;
   text-indent: -9999px;
 }
 */
 div.timeline-event.state-available {
   margin: 0;
-  background-color: #4f824f;
+  background-color: #6cad6c;
 }
 div.timeline-event.state-available:hover {
-  background-color: #63a163;
+  background-color: #8dbf8d;
 }
 
 div.timeline-event.state-available-south {
@@ -1790,7 +1788,7 @@ div.timeline-event.state-available-south:hover {
 
 div.timeline-event.state-available-north {
   margin: 0;
-  background-color: black;
+  background-color: #242424;
 }
 div.timeline-event.state-available-north:hover {
   background-color: #1a1a1a;
@@ -1798,10 +1796,10 @@ div.timeline-event.state-available-north:hover {
 
 div.timeline-event.state-schipper-service {
   margin: 0;
-  background-color: #e0c100;
+  background-color: #f6e500;
 }
 div.timeline-event.state-schipper-service:hover {
-  background-color: #ffde14;
+  background-color: #fff02a;
 }
 
 div.timeline-event.state-unreached {
@@ -1814,10 +1812,10 @@ div.timeline-event.state-unreached:hover {
 
 div.timeline-event.state-unavailable {
   margin: 0;
-  background-color: #a93232;
+  background-color: #d34545;
 }
 div.timeline-event.state-unavailable:hover {
-  background-color: #c84646;
+  background-color: #dd6e6e;
 }
 
 div.timeline-event.state-new {
@@ -1833,7 +1831,7 @@ div.timeline-event div.timeline-event-content span.secret {
 .state-loading-left {
   margin: 0;
   background-color: #ddd;
-  /*border:1px solid #4f824f;*/
+  /*border:1px solid #6cad6c;*/
   border-bottom: 10px solid #ddd;
   text-align: right;
 }
@@ -1841,7 +1839,7 @@ div.timeline-event div.timeline-event-content span.secret {
 .state-loading-right {
   margin: 0;
   background-color: #ddd;
-  /*border:1px solid #4f824f;*/
+  /*border:1px solid #6cad6c;*/
   border-bottom: 10px solid #ddd;
   text-align: left;
 }
@@ -1854,17 +1852,17 @@ div.timeline-event div.timeline-event-content span.secret {
 
 div.timeline-event.agg-less {
   margin: 0;
-  background-color: #a93232;
+  background-color: #d34545;
   /*border:1px solid #a0a0a0;*/
   /*border-bottom: 10px solid #a0a0a0;*/
 }
 div.timeline-event.agg-less:hover {
-  background-color: #c84646;
+  background-color: #dd6e6e;
 }
 
 div.timeline-event.agg-even {
   margin: 0;
-  background-color: #ba6a24;
+  background-color: #e09131;
   /*border:1px solid #ba6a24;*/
   /*border-bottom: 10px solid #ba6a24;*/
 }
@@ -1874,12 +1872,12 @@ div.timeline-event.agg-even:hover {
 
 div.timeline-event.agg-1 {
   margin: 0;
-  background-color: #4f824f;
+  background-color: #6cad6c;
   /*border:1px solid #415e6b;*/
   /*border-bottom: 10px solid #415e6b;*/
 }
 div.timeline-event.agg-1:hover {
-  background-color: #63a163;
+  background-color: #8dbf8d;
 }
 
 div.timeline-event.agg-2 {
@@ -1944,7 +1942,7 @@ div.timeline-event.agg-more:hover {
 
 div.timeline-event.wishes-less {
   margin: 0;
-  background-color: #a93232;
+  background-color: #d34545;
   /*border:1px solid #a0a0a0;*/
   /*border-bottom: 10px solid #a0a0a0;*/
   /*text-indent: -9999px;*/
