--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -210,7 +210,7 @@
 
               .even {
                 // background-color: #ba6a24;
-                background-color: #ba6a24;
+                background-color: #e09131;
               }
 
               .less {
@@ -219,8 +219,8 @@
               }
 
               .disabled {
-                // background-color: #a0a0a0;
                 background-color: #a0a0a0;
+                // background-color: #ececec;
               }
 
               .pie {
@@ -456,7 +456,8 @@
           color: #fff;
           margin-bottom: 5px;
           padding-top: 18px;
-          background-color: #415e6b;
+          // background-color: #415e6b;
+          background-color: #6cad6c;
 
           strong {
             font-size: 24px;
@@ -464,11 +465,13 @@
         }
 
         .sa-icon-driver {
-          background-color: #253943;
+          // background-color: #253943;
+          background-color: #f6e500;
         }
 
         .sa-icon-commander {
-          background-color: #ba6a24;
+          // background-color: #ba6a24;
+          background-color: #648ea0;
         }
 
         .sa-icon-reserve-available {
@@ -476,7 +479,7 @@
         }
 
         .sa-icon-reserve-available-north {
-          background-color: black;
+          background-color: #242424;
         }
 
         .sa-icon-reserve-available-south {
@@ -491,12 +494,14 @@
           background-color: #d34545;
         }
 
+        // TODO: Depreciated!
         .sa-icon-reserve-unreached {
           background-color: #65619b;
         }
 
         .sa-icon-reserve-noplanning {
           background-color: #a0a0a0;
+          // background-color: #ececec;
         }
 
         .sa-member-card {
