--- a/sass/app/_timeline.scss
+++ b/sass/app/_timeline.scss
@@ -1,5 +1,4 @@
 #timeline {
-
 }
 
 #timeline-controls {
@@ -165,12 +164,12 @@
         }
 
         .bar-BeschikbaarNoord {
-          background-color: #1a1a1a;
-          background-image: -moz-linear-gradient(top, #1a1a1a, #050505);
-          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1a1a1a), to(#050505));
-          background-image: -webkit-linear-gradient(top, #1a1a1a, #050505);
-          background-image: -o-linear-gradient(top, #1a1a1a, #050505);
-          background-image: linear-gradient(to bottom, #1a1a1a, #050505);
+          background-color: #242424;
+          background-image: -moz-linear-gradient(top, #242424, #050505);
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#242424), to(#050505));
+          background-image: -webkit-linear-gradient(top, #242424, #050505);
+          background-image: -o-linear-gradient(top, #242424, #050505);
+          background-image: linear-gradient(to bottom, #242424, #050505);
           background-repeat: repeat-x;
           filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a1a1a', endColorstr='#ff050505', GradientType=0);
         }
@@ -198,14 +197,14 @@
         }
 
         .bar-Unreached {
-          background-color: #65619b;
-          background-image: -moz-linear-gradient(top, #65619b, #514E7C);
-          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#65619b), to(#514E7C));
-          background-image: -webkit-linear-gradient(top, #65619b, #514E7C);
-          background-image: -o-linear-gradient(top, #65619b, #514E7C);
-          background-image: linear-gradient(to bottom, #65619b, #514E7C);
+          background-color: #8a85c7;
+          background-image: -moz-linear-gradient(top, #8a85c7, #514E7C);
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#8a85c7), to(#514E7C));
+          background-image: -webkit-linear-gradient(top, #8a85c7, #514E7C);
+          background-image: -o-linear-gradient(top, #8a85c7, #514E7C);
+          background-image: linear-gradient(to bottom, #8a85c7, #514E7C);
           background-repeat: repeat-x;
-          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff65619b', endColorstr='#ff514E7C', GradientType=0);
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff8a85c7', endColorstr='#ff514E7C', GradientType=0);
         }
       }
 
@@ -284,12 +283,12 @@
 }
 
 .legenda-row .legenda-state-available-north .square {
-  background-color: black;
+  background-color: #242424;
 }
 
 .legenda-row .legenda-state-available-south .square {
   // background-color: #8a85c7;
-  background-color: #65619b;
+  background-color: #8a85c7;
 }
 
 .legenda-row .legenda-state-unavailable .square {
@@ -310,7 +309,7 @@
 }
 
 .legenda-row .legenda-even .square {
-  background-color: #ba6a24;
+  background-color: #e09131;
 }
 
 .legenda-row .legenda-less .square {
@@ -349,6 +348,15 @@
 div.bar span {
   font-size: 9px;
 }
+
+.del {
+  background-color: #415e6b;
+
+  border-bottom-color: #ba6a24;
+
+  border-left-color: #a0a0a0;
+}
+
 
 div.timeline-frame {
   border: 1px solid #ddd;
@@ -669,7 +677,7 @@ div.timeline-event.state-available-north {
   //    text-indent: -9999px;
 
   &:hover {
-    background-color: lighten(black, 10%);
+    background-color: lighten(#242424, 10%);
   }
 }
 
@@ -685,11 +693,11 @@ div.timeline-event.state-schipper-service {
 
 div.timeline-event.state-unreached {
   margin: 0;
-  background-color: #65619b;
+  background-color: #8a85c7;
   //    text-indent: -9999px;
 
   &:hover {
-    background-color: lighten(#65619b, 10%);
+    background-color: lighten(#8a85c7, 10%);
   }
 }
 
@@ -705,7 +713,7 @@ div.timeline-event.state-unavailable {
 
 div.timeline-event.state-new {
   margin: 0;
-  background-color: #ddd;
+  background-color: #ececec;
   //    text-indent: -9999px;
 }
 
@@ -760,7 +768,7 @@ div.timeline-event.agg-even {
   // text-indent: -9999px;
 
   &:hover {
-    background-color: lighten(#ba6a24, 10%);
+    background-color: lighten(#e09131, 10%);
   }
 }
 
@@ -780,78 +788,84 @@ div.timeline-event.agg-1 {
 div.timeline-event.agg-2 {
   margin: 0;
   // background-color: #3d5865;
-  background-color: #477547;
+  background-color: #6cad6c;
+//  background-color: #477547;
   /*border:1px solid #3d5865;*/
   /*border-bottom: 10px solid #3d5865;*/
   // text-indent: -9999px;
 
   &:hover {
-    background-color: lighten(#477547, 10%);
+    background-color: lighten(#6cad6c, 10%);
   }
 }
 
 div.timeline-event.agg-3 {
   margin: 0;
   // background-color: #344c58;
-  background-color: #436f43;
+  background-color: #6cad6c;
+  // background-color: #436f43;
   /*border:1px solid #344c58;*/
   /*border-bottom: 10px solid #344c58;*/
   // text-indent: -9999px;
 
   &:hover {
-    background-color: lighten(#436f43, 10%);
+    background-color: lighten(#6cad6c, 10%);
   }
 }
 
 div.timeline-event.agg-4 {
   margin: 0;
   // background-color: #2f4550;
-  background-color: #3d673d;
+  background-color: #6cad6c;
+  // background-color: #3d673d;
   /*border:1px solid #2f4550;*/
   /*border-bottom: 10px solid #2f4550;*/
 
   // text-indent: -9999px;
 
   &:hover {
-    background-color: lighten(#3d673d, 10%);
+    background-color: lighten(#6cad6c, 10%);
   }
 }
 
 div.timeline-event.agg-5 {
   margin: 0;
   // background-color: #2c424c;
-  background-color: #396039;
+  background-color: #6cad6c;
+  // background-color: #396039;
   /*border:1px solid #2c424c;*/
   /*border-bottom: 10px solid #2c424c;*/
   // text-indent: -9999px;
 
   &:hover {
-    background-color: lighten(#396039, 10%);
+    background-color: lighten(#6cad6c, 10%);
   }
 }
 
 div.timeline-event.agg-6 {
   margin: 0;
   // background-color: #253943;
-  background-color: #335833;
+  background-color: #6cad6c;
+  // background-color: #335833;
   /*border:1px solid #253943;*/
   /*border-bottom: 10px solid #253943;*/
   // text-indent: -9999px;
 
   &:hover {
-    background-color: lighten(#335833, 10%);
+    background-color: lighten(#6cad6c, 10%);
   }
 }
 
 div.timeline-event.agg-more {
   margin: 0;
-  background-color: #305330;
+  background-color: #6cad6c;
+  // background-color: #305330;
   /*border:1px solid #486877;*/
   /*border-bottom: 10px solid #486877;*/
   // text-indent: -9999px;
 
   &:hover {
-    background-color: lighten(#305330, 10%);
+    background-color: lighten(#6cad6c, 10%);
   }
 }
 
@@ -865,112 +879,119 @@ div.timeline-event.wishes-less {
   text-align: center;
 
   &:hover {
-    background-color: lighten(#335833, 10%);
+    background-color: lighten(#d34545, 10%);
   }
 }
 
 div.timeline-event.wishes-even {
   margin: 0;
   // background-color: #ba6a24;
-  background-color: #ddd;
+  background-color: #ececec;
   /*border:1px solid #ba6a24;*/
   /*border-bottom: 10px solid #ba6a24;*/
   /*text-indent: -9999px;*/
   text-align: center;
 
   &:hover {
-    background-color: lighten(#ddd, 10%);
+    background-color: lighten(#ececec, 10%);
   }
 }
 
 div.timeline-event.wishes-1 {
   margin: 0;
-  background-color: #415e6b;
+  background-color: #648ea0;
+  // background-color: #415e6b;
   /*border:1px solid #415e6b;*/
   /*border-bottom: 10px solid #415e6b;*/
   /*text-indent: -9999px;*/
   text-align: center;
 
   &:hover {
-    background-color: lighten(#415e6b, 10%);
+    background-color: lighten(#648ea0, 10%);
   }
 }
 
 div.timeline-event.wishes-2 {
   margin: 0;
-  background-color: #3d5865;
+  background-color: #648ea0;
+  // background-color: #3d5865;
   /*border:1px solid #3d5865;*/
   /*border-bottom: 10px solid #3d5865;*/
   /*text-indent: -9999px;*/
   text-align: center;
 
   &:hover {
-    background-color: lighten(#3d5865, 10%);
+    background-color: lighten(#648ea0, 10%);
   }
 }
 
 div.timeline-event.wishes-3 {
   margin: 0;
-  background-color: #344c58;
+  background-color: #648ea0;
+  // background-color: #344c58;
   /*border:1px solid #344c58;*/
   /*border-bottom: 10px solid #344c58;*/
   /*text-indent: -9999px;*/
   text-align: center;
 
   &:hover {
-    background-color: lighten(#344c58, 10%);
+    background-color: lighten(#648ea0, 10%);
   }
 }
 
 div.timeline-event.wishes-4 {
   margin: 0;
-  background-color: #2f4550;
+  background-color: #648ea0;
+  // background-color: #2f4550;
   /*border:1px solid #2f4550;*/
   /*border-bottom: 10px solid #2f4550;*/
   /*text-indent: -9999px;*/
   text-align: center;
 
   &:hover {
-    background-color: lighten(#2f4550, 10%);
+    background-color: lighten(#648ea0, 10%);
   }
 }
 
 div.timeline-event.wishes-5 {
   margin: 0;
-  background-color: #2c424c;
+  background-color: #648ea0;
+  // background-color: #2c424c;
   /*border:1px solid #2c424c;*/
   /*border-bottom: 10px solid #2c424c;*/
   /*text-indent: -9999px;*/
   text-align: center;
 
   &:hover {
-    background-color: lighten(#2c424c, 10%);
+    background-color: lighten(#648ea0, 10%);
   }
 }
 
 div.timeline-event.wishes-6 {
   margin: 0;
-  background-color: #253943;
+  background-color: #648ea0;
+  // background-color: #253943;
   /*border:1px solid #253943;*/
   /*border-bottom: 10px solid #253943;*/
   /*text-indent: -9999px;*/
   text-align: center;
 
   &:hover {
-    background-color: lighten(#253943, 10%);
+    background-color: lighten(#648ea0, 10%);
   }
 }
 
 div.timeline-event.wishes-more {
   margin: 0;
-  background-color: #486877;
+  background-color: #648ea0;
+  // background-color: #486877;
   /*border:1px solid #486877;*/
   /*border-bottom: 10px solid #486877;*/
   /*text-indent: -9999px;*/
   text-align: center;
 
   &:hover {
-    background-color: lighten(#486877, 10%);
+    background-color: lighten(#648ea0, 10%);
   }
 }
 
@@ -1340,10 +1361,7 @@ div.timeline-event-range {
 .datepicker td.active, .datepicker td.active:hover {
   background-color: #006dcc;
   background-image: 0;
-  background-image: 0;
   // background-image: 0 to(#0044cc));
-  background-image: 0;
-  background-image: 0;
   background-image: linear-gradient(top, #0088cc, #0044cc);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc',
@@ -1388,10 +1406,7 @@ div.timeline-event-range {
 .datepicker td span.active {
   background-color: #006dcc;
   background-image: 0;
-  background-image: 0;
   //background-image: 0 to(#0044cc));
-  background-image: 0;
-  background-image: 0;
   background-image: linear-gradient(top, #0088cc, #0044cc);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc',
