--- a/war/css/app.css
+++ b/war/css/app.css
@@ -567,7 +567,7 @@ dl dd {
   background-color: #6cad6c;
 }
 #dashboard .widget ul#pies li .blocks .block .icon .even {
-  background-color: #ba6a24;
+  background-color: #e09131;
 }
 #dashboard .widget ul#pies li .blocks .block .icon .less {
   background-color: #d34545;
@@ -753,22 +753,22 @@ dl dd {
   color: #fff;
   margin-bottom: 5px;
   padding-top: 18px;
-  background-color: #415e6b;
+  background-color: #6cad6c;
 }
 .sa ul.sa-setup li .sa-member .sa-member-icon strong {
   font-size: 24px;
 }
 .sa ul.sa-setup li .sa-member .sa-icon-driver {
-  background-color: #253943;
+  background-color: #f6e500;
 }
 .sa ul.sa-setup li .sa-member .sa-icon-commander {
-  background-color: #ba6a24;
+  background-color: #648ea0;
 }
 .sa ul.sa-setup li .sa-member .sa-icon-reserve-available {
   background-color: #6cad6c;
 }
 .sa ul.sa-setup li .sa-member .sa-icon-reserve-available-north {
-  background-color: black;
+  background-color: #242424;
 }
 .sa ul.sa-setup li .sa-member .sa-icon-reserve-available-south {
   background-color: #8a85c7;
@@ -1332,12 +1332,12 @@ ul.nav-tabs-app li span.entypo {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff8a85c7', endColorstr='#ffc77b0a', GradientType=0);
 }
 #memberBars ul li .progress .bar-BeschikbaarNoord {
-  background-color: #1a1a1a;
-  background-image: -moz-linear-gradient(top, #1a1a1a, #050505);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1a1a1a), to(#050505));
-  background-image: -webkit-linear-gradient(top, #1a1a1a, #050505);
-  background-image: -o-linear-gradient(top, #1a1a1a, #050505);
-  background-image: linear-gradient(to bottom, #1a1a1a, #050505);
+  background-color: #242424;
+  background-image: -moz-linear-gradient(top, #242424, #050505);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#242424), to(#050505));
+  background-image: -webkit-linear-gradient(top, #242424, #050505);
+  background-image: -o-linear-gradient(top, #242424, #050505);
+  background-image: linear-gradient(to bottom, #242424, #050505);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a1a1a', endColorstr='#ff050505', GradientType=0);
 }
@@ -1362,14 +1362,14 @@ ul.nav-tabs-app li span.entypo {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd34545', endColorstr='#ff8f2b2b', GradientType=0);
 }
 #memberBars ul li .progress .bar-Unreached {
-  background-color: #65619b;
-  background-image: -moz-linear-gradient(top, #65619b, #514e7c);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#65619b), to(#514e7c));
-  background-image: -webkit-linear-gradient(top, #65619b, #514e7c);
-  background-image: -o-linear-gradient(top, #65619b, #514e7c);
-  background-image: linear-gradient(to bottom, #65619b, #514e7c);
+  background-color: #8a85c7;
+  background-image: -moz-linear-gradient(top, #8a85c7, #514e7c);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#8a85c7), to(#514e7c));
+  background-image: -webkit-linear-gradient(top, #8a85c7, #514e7c);
+  background-image: -o-linear-gradient(top, #8a85c7, #514e7c);
+  background-image: linear-gradient(to bottom, #8a85c7, #514e7c);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff65619b', endColorstr='#ff514E7C', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff8a85c7', endColorstr='#ff514E7C', GradientType=0);
 }
 
 /*legenda*/
@@ -1435,11 +1435,11 @@ ul.nav-tabs-app li span.entypo {
 }
 
 .legenda-row .legenda-state-available-north .square {
-  background-color: black;
+  background-color: #242424;
 }
 
 .legenda-row .legenda-state-available-south .square {
-  background-color: #65619b;
+  background-color: #8a85c7;
 }
 
 .legenda-row .legenda-state-unavailable .square {
@@ -1455,7 +1455,7 @@ ul.nav-tabs-app li span.entypo {
 }
 
 .legenda-row .legenda-even .square {
-  background-color: #ba6a24;
+  background-color: #e09131;
 }
 
 .legenda-row .legenda-less .square {
@@ -1490,6 +1490,12 @@ ul.nav-tabs-app li span.entypo {
 
 div.bar span {
   font-size: 9px;
+}
+
+.del {
+  background-color: #415e6b;
+  border-bottom-color: #ba6a24;
+  border-left-color: #a0a0a0;
 }
 
 div.timeline-frame {
@@ -1791,7 +1797,7 @@ div.timeline-event.state-available-north {
   background-color: #242424;
 }
 div.timeline-event.state-available-north:hover {
-  background-color: #1a1a1a;
+  background-color: #3e3e3e;
 }
 
 div.timeline-event.state-schipper-service {
@@ -1804,10 +1810,10 @@ div.timeline-event.state-schipper-service:hover {
 
 div.timeline-event.state-unreached {
   margin: 0;
-  background-color: #65619b;
+  background-color: #8a85c7;
 }
 div.timeline-event.state-unreached:hover {
-  background-color: #8380af;
+  background-color: #aca8d7;
 }
 
 div.timeline-event.state-unavailable {
@@ -1820,7 +1826,7 @@ div.timeline-event.state-unavailable:hover {
 
 div.timeline-event.state-new {
   margin: 0;
-  background-color: #ddd;
+  background-color: #ececec;
 }
 
 div.timeline-event div.timeline-event-content span.secret {
@@ -1867,7 +1873,7 @@ div.timeline-event.agg-even {
   /*border-bottom: 10px solid #ba6a24;*/
 }
 div.timeline-event.agg-even:hover {
-  background-color: #d98338;
+  background-color: #e7a95d;
 }
 
 div.timeline-event.agg-1 {
@@ -1882,62 +1888,62 @@ div.timeline-event.agg-1:hover {
 
 div.timeline-event.agg-2 {
   margin: 0;
-  background-color: #477547;
+  background-color: #6cad6c;
   /*border:1px solid #3d5865;*/
   /*border-bottom: 10px solid #3d5865;*/
 }
 div.timeline-event.agg-2:hover {
-  background-color: #5a955a;
+  background-color: #8dbf8d;
 }
 
 div.timeline-event.agg-3 {
   margin: 0;
-  background-color: #436f43;
+  background-color: #6cad6c;
   /*border:1px solid #344c58;*/
   /*border-bottom: 10px solid #344c58;*/
 }
 div.timeline-event.agg-3:hover {
-  background-color: #568f56;
+  background-color: #8dbf8d;
 }
 
 div.timeline-event.agg-4 {
   margin: 0;
-  background-color: #3d673d;
+  background-color: #6cad6c;
   /*border:1px solid #2f4550;*/
   /*border-bottom: 10px solid #2f4550;*/
 }
 div.timeline-event.agg-4:hover {
-  background-color: #508750;
+  background-color: #8dbf8d;
 }
 
 div.timeline-event.agg-5 {
   margin: 0;
-  background-color: #396039;
+  background-color: #6cad6c;
   /*border:1px solid #2c424c;*/
   /*border-bottom: 10px solid #2c424c;*/
 }
 div.timeline-event.agg-5:hover {
-  background-color: #4c804c;
+  background-color: #8dbf8d;
 }
 
 div.timeline-event.agg-6 {
   margin: 0;
-  background-color: #335833;
+  background-color: #6cad6c;
   /*border:1px solid #253943;*/
   /*border-bottom: 10px solid #253943;*/
 }
 div.timeline-event.agg-6:hover {
-  background-color: #467846;
+  background-color: #8dbf8d;
 }
 
 div.timeline-event.agg-more {
   margin: 0;
-  background-color: #305330;
+  background-color: #6cad6c;
   /*border:1px solid #486877;*/
   /*border-bottom: 10px solid #486877;*/
 }
 div.timeline-event.agg-more:hover {
-  background-color: #437343;
+  background-color: #8dbf8d;
 }
 
 div.timeline-event.wishes-less {
@@ -1949,103 +1955,103 @@ div.timeline-event.wishes-less {
   text-align: center;
 }
 div.timeline-event.wishes-less:hover {
-  background-color: #467846;
+  background-color: #dd6e6e;
 }
 
 div.timeline-event.wishes-even {
   margin: 0;
-  background-color: #ddd;
+  background-color: #ececec;
   /*border:1px solid #ba6a24;*/
   /*border-bottom: 10px solid #ba6a24;*/
   /*text-indent: -9999px;*/
   text-align: center;
 }
 div.timeline-event.wishes-even:hover {
-  background-color: #f7f7f7;
+  background-color: white;
 }
 
 div.timeline-event.wishes-1 {
   margin: 0;
-  background-color: #415e6b;
+  background-color: #648ea0;
   /*border:1px solid #415e6b;*/
   /*border-bottom: 10px solid #415e6b;*/
   /*text-indent: -9999px;*/
   text-align: center;
 }
 div.timeline-event.wishes-1:hover {
-  background-color: #547a8b;
+  background-color: #84a5b3;
 }
 
 div.timeline-event.wishes-2 {
   margin: 0;
-  background-color: #3d5865;
+  background-color: #648ea0;
   /*border:1px solid #3d5865;*/
   /*border-bottom: 10px solid #3d5865;*/
   /*text-indent: -9999px;*/
   text-align: center;
 }
 div.timeline-event.wishes-2:hover {
-  background-color: #507485;
+  background-color: #84a5b3;
 }
 
 div.timeline-event.wishes-3 {
   margin: 0;
-  background-color: #344c58;
+  background-color: #648ea0;
   /*border:1px solid #344c58;*/
   /*border-bottom: 10px solid #344c58;*/
   /*text-indent: -9999px;*/
   text-align: center;
 }
 div.timeline-event.wishes-3:hover {
-  background-color: #476878;
+  background-color: #84a5b3;
 }
 
 div.timeline-event.wishes-4 {
   margin: 0;
-  background-color: #2f4550;
+  background-color: #648ea0;
   /*border:1px solid #2f4550;*/
   /*border-bottom: 10px solid #2f4550;*/
   /*text-indent: -9999px;*/
   text-align: center;
 }
 div.timeline-event.wishes-4:hover {
-  background-color: #426170;
+  background-color: #84a5b3;
 }
 
 div.timeline-event.wishes-5 {
   margin: 0;
-  background-color: #2c424c;
+  background-color: #648ea0;
   /*border:1px solid #2c424c;*/
   /*border-bottom: 10px solid #2c424c;*/
   /*text-indent: -9999px;*/
   text-align: center;
 }
 div.timeline-event.wishes-5:hover {
-  background-color: #3f5e6c;
+  background-color: #84a5b3;
 }
 
 div.timeline-event.wishes-6 {
   margin: 0;
-  background-color: #253943;
+  background-color: #648ea0;
   /*border:1px solid #253943;*/
   /*border-bottom: 10px solid #253943;*/
   /*text-indent: -9999px;*/
   text-align: center;
 }
 div.timeline-event.wishes-6:hover {
-  background-color: #375564;
+  background-color: #84a5b3;
 }
 
 div.timeline-event.wishes-more {
   margin: 0;
-  background-color: #486877;
+  background-color: #648ea0;
   /*border:1px solid #486877;*/
   /*border-bottom: 10px solid #486877;*/
   /*text-indent: -9999px;*/
   text-align: center;
 }
 div.timeline-event.wishes-more:hover {
-  background-color: #5b8497;
+  background-color: #84a5b3;
 }
 
 /*
@@ -2402,9 +2408,6 @@ div.timeline-event-range {
 .datepicker td.active, .datepicker td.active:hover {
   background-color: #006dcc;
   background-image: 0;
-  background-image: 0;
-  background-image: 0;
-  background-image: 0;
   background-image: linear-gradient(top, #0088cc, #0044cc);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
@@ -2447,9 +2450,6 @@ div.timeline-event-range {
 
 .datepicker td span.active {
   background-color: #006dcc;
-  background-image: 0;
-  background-image: 0;
-  background-image: 0;
   background-image: 0;
   background-image: linear-gradient(top, #0088cc, #0044cc);
   background-repeat: repeat-x;
