work in progress with functional users

--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -261,7 +261,7 @@
                   <input type="text"
                          class="inputPhoneNumbers inputPhoneNumber-1"
                          ng-model="profilemeta.phones[1]"
-                         ng-change="profilePhoneNumberParser(1, profilemeta.phones[1])"
+                         ng-change="profilePhoneNumberParser()"
                          style="width: 155px">
                          <!--value="{{data.resources.PhoneAddresses[0]}}"-->
                 </div>
@@ -273,7 +273,7 @@
                   <input type="text"
                          class="inputPhoneNumbers inputPhoneNumber-1"
                          ng-model="profilemeta.phones[1]"
-                         ng-change="profilePhoneNumberParser(1, profilemeta.phones[1])"
+                         ng-change="profilePhoneNumberParser()"
                          style="width: 155px">
                          <!--value="{{data.resources.PhoneAddresses[0]}}"-->
                   <button class="btn btn-success"
@@ -311,7 +311,7 @@
                   <input type="text"
                          class="inputPhoneNumbers inputPhoneNumber-2"
                          ng-model="profilemeta.phones[2]"
-                         ng-change="profilePhoneNumberParser(2, profilemeta.phones[2])"
+                         ng-change="profilePhoneNumberParser()"
                          style="width: 155px">
                          <!--value="{{data.resources.PhoneAddresses[1]}}"-->
                 </div>
@@ -323,7 +323,7 @@
                   <input type="text"
                          class="inputPhoneNumbers inputPhoneNumber-2"
                          ng-model="profilemeta.phones[2]"
-                         ng-change="profilePhoneNumberParser(2, profilemeta.phones[2])"
+                         ng-change="profilePhoneNumberParser()"
                          style="width: 155px">
                          <!--value="{{data.resources.PhoneAddresses[1]}}"-->
                   <button class="btn"
@@ -366,7 +366,7 @@
                   <input type="text"
                          class="inputPhoneNumbers inputPhoneNumber-3"
                          ng-model="profilemeta.phones[3]"
-                         ng-change="profilePhoneNumberParser(3, profilemeta.phones[3])"
+                         ng-change="profilePhoneNumberParser()"
                          style="width: 155px">
                          <!--value="{{data.resources.PhoneAddresses[2]}}"-->
                   <button class="btn"
