--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -20,7 +20,7 @@
         </li>
 
         <li class="{{(views.edit==true) && 'active'}}"
-            ng-hide="(app.resources.role > 1 && data.resources.uuid != app.resources.uuid)">
+            ng-hide="data.resources.role == 0 || (app.resources.role > 1 && data.resources.uuid != app.resources.uuid)">
           <a href="{{data.resources.uuid}}#editTab"
               data-toggle="tab"
               ng-click="fixTabHeight('editTab'); setViewTo('edit')">
@@ -38,7 +38,7 @@
         </li>
 
         <li class="{{(views.timeline==true) && 'active'}}"
-            ng-hide="(app.resources.role > 1 && data.resources.uuid != app.resources.uuid)">
+            ng-hide="data.resources.role == 0 || (app.resources.role > 1 && data.resources.uuid != app.resources.uuid)">
           <a href="{{data.resources.uuid}}#userTimelineTab"
              data-toggle="tab"
              ng-click="fixTabHeight('userTimelineTab'); setViewTo('timeline'); redraw()"
@@ -118,7 +118,7 @@
               <!--<dd ng-show="data.resources.PostCity == ''">-</dd>-->
               <dd>{{data.resources.PostCity}}</dd>
 
-            <section ng-hide="app.resources.role > 1">
+            <section ng-hide="data.resources.role == 0 || app.resources.role > 1">
               <hr/>
 
               <dt>{{ui.profile.username}}</dt>
