--- a/sass/app/_styles.scss
+++ b/sass/app/_styles.scss
@@ -69,17 +69,20 @@ dl {
 
 .label-more,
 .badge-more {
-  background-color: #415e6b;
+  // background-color: #415e6b;
+  background-color: #6cad6c;
 }
 
 .label-less,
 .badge-less {
-  background-color: #a0a0a0;
+  // background-color: #a0a0a0;
+  background-color: #d34545;
 }
 
 .label-even,
 .badge-even {
-  background-color: #ba6a24;
+  // background-color: #ba6a24;
+  background-color: #e09131;
 }
 
 .label-inset,
